--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -12,11 +12,11 @@
     <table>
         <tr>
             <td>用户名:</td>
-            <td><input type="text" name="username"></td>
+            <td><input type="text" name="username" value="admin"></td>
         </tr>
         <tr>
             <td>密码:</td>
-            <td><input type="password" name="password"></td>
+            <td><input type="password" name="password" value="admin"></td>
         </tr>
         <tr>
             <td colspan="2"><button type="submit">登录</button></td>
